--- a/_pages/isitfeasable.html
+++ b/_pages/isitfeasable.html
@@ -13,7 +13,7 @@ image: '/images/45.jpg'
           <div class="row grid">
             {% if site.posts.size > 0 %}
               {% for post in paginator.posts %}
-                {% unless post.tag != gamedev %}
+                {% unless post.tag == gamedev %}
                   {% include article-content.html %}
                 {% endunless %}
               {% endfor %}
