--- a/_pages/gamedev.html
+++ b/_pages/gamedev.html
@@ -5,6 +5,8 @@ permalink: /gamedev/
 
 ---
 
+{% include featured-posts.html %}
+
 <div class="container">
   <div class="row">
     <div class="col col-12">
@@ -22,3 +24,4 @@ permalink: /gamedev/
     </div>
   </div>
 </div>
+{% include pagination.html %}
