--- a/_pages/1gamedev.html
+++ b/_pages/1gamedev.html
@@ -1,34 +1,17 @@
 ---
 layout: default
 tag: gamedev
-title: Gamedev Posts
+title: Gamedev
 permalink: /gamedev/
 ---
 
-<!-- Begin hero section (as in index.html) -->
-{% if site.hero.image %}
-<section class="hero">
-  <div class="hero__inner">
-    <div class="hero__image">
-      <img class="lazy" data-src="{{site.baseurl}}{{site.hero.image}}" alt="{{site.hero.title}}">
-    </div>
-    <div class="hero__content">
-      <h1 class="hero__title">{{site.hero.title}}</h1>
-      <p class="hero__desc">{{site.hero.description}}</p>
-    </div>
+<!-- Gamedev Title and Description -->
+<section class="gamedev-intro">
+  <div class="gamedev-intro__content">
+    <h1 class="gamedev-intro__title">Gamedev</h1>
+    <p class="gamedev-intro__desc">I have been involved in game development and VR for 8 years and have released a game called <strong>Expedition Zero</strong>.</p>
   </div>
 </section>
-{% else %}
-<section class="hero-without-image">
-  <div class="hero-inner">
-    <div class="hero-content">
-      <h1 class="hero__title">{{site.hero.title}}</h1>
-      <p class="hero__desc">{{site.hero.description}}</p>
-    </div>
-  </div>
-</section>
-{% endif %}
-<!-- End hero section -->
 
 <div class="container">
   <div class="row">
