--- a/_pages/1gamedev.html
+++ b/_pages/1gamedev.html
@@ -5,13 +5,30 @@ title: Gamedev
 permalink: /gamedev/
 ---
 
-<!-- Gamedev Title and Description -->
-<section class="gamedev-intro">
-  <div class="gamedev-intro__content">
-    <h1 class="gamedev-intro__title">Gamedev</h1>
-    <p class="gamedev-intro__desc">I have been involved in game development and VR for 8 years and have released a game called <strong>Expedition Zero</strong>.</p>
+<!-- Begin hero section (as in index.html) -->
+{% if site.gamedev.image %}
+<section class="hero">
+  <div class="hero__inner">
+    <div class="hero__image">
+      <img class="lazy" data-src="{{site.baseurl}}{{site.gamedev.image}}" alt="{{site.gamedev.title}}">
+    </div>
+    <div class="hero__content">
+      <h1 class="hero__title">{{site.gamedev.title}}</h1>
+      <p class="hero__desc">{{site.gamedev.description}}</p>
+    </div>
   </div>
 </section>
+{% else %}
+<section class="hero-without-image">
+  <div class="hero-inner">
+    <div class="hero-content">
+      <h1 class="hero__title">{{site.gamedev.title}}</h1>
+      <p class="hero__desc">{{site.gamedev.description}}</p>
+    </div>
+  </div>
+</section>
+{% endif %}
+<!-- End hero section -->
 
 <div class="container">
   <div class="row">
