gamedev hero update

--- a/_pages/1gamedev.html
+++ b/_pages/1gamedev.html
@@ -10,7 +10,7 @@ permalink: /gamedev/
 <section class="hero">
   <div class="hero__inner">
     <div class="hero__image">
-      <img class="lazy" data-src="{{site.baseurl}}{{site.gamedev.image}}" alt="{{site.gamedev.title}}">
+      <img class="lazy" data-src="{{site.baseurl}}{{site.hero.image}}" alt="{{site.hero.title}}">
     </div>
     <div class="hero__content">
       <h1 class="hero__title">{{site.gamedev.title}}</h1>
