--- a/_pages/1_gamedev.html
+++ b/_pages/1_gamedev.html
@@ -5,16 +5,20 @@ title: Gamedev
 permalink: /gamedev/
 ---
 
-<!-- Begin hero section (as in index.html) -->
-{% if site.gamedev.image %}
+<!-- Begin hero section -->
+{% assign dynamic_title = site[page.tag].title %}
+{% assign dynamic_description = site[page.tag].description %}
+{% assign dynamic_image = site[page.tag].image %}
+
+{% if dynamic_image %}
 <section class="hero">
   <div class="hero__inner">
     <div class="hero__image">
-      <img class="lazy" data-src="{{site.baseurl}}{{site.hero.image}}" alt="{{site.hero.title}}">
+      <img class="lazy" data-src="{{site.baseurl}}{{dynamic_image}}" alt="{{dynamic_title}}">
     </div>
     <div class="hero__content">
-      <h1 class="hero__title">{{site.gamedev.title}}</h1>
-      <p class="hero__desc">{{site.gamedev.description}}</p>
+      <h1 class="hero__title">{{dynamic_title}}</h1>
+      <p class="hero__desc">{{dynamic_description}}</p>
     </div>
   </div>
 </section>
@@ -22,8 +26,8 @@ permalink: /gamedev/
 <section class="hero-without-image">
   <div class="hero-inner">
     <div class="hero-content">
-      <h1 class="hero__title">{{site.gamedev.title}}</h1>
-      <p class="hero__desc">{{site.gamedev.description}}</p>
+      <h1 class="hero__title">{{dynamic_title}}</h1>
+      <p class="hero__desc">{{dynamic_description}}</p>
     </div>
   </div>
 </section>
